# Beepper

./: .gitignore  README.md  pyproject.toml
beepper/: __init__.py  beepper.py  beepper.pyi  generate_wav.py
