[project]
name = "beepper"
version = "1.0.0"
description = "Makes an alert noise"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{ name = "Henrik Koski", email = "henrikkoski00@gmail.com" }]
license = { file = "LICENSE" }

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
